[gd_scene load_steps=42 format=3 uid="uid://dh64f5bodshv7"]

[ext_resource type="Script" path="res://codings/UI/PartyUI.gd" id="1_dogj7"]
[ext_resource type="Texture2D" uid="uid://cnwsdp6c2x76w" path="res://art/Icons/Party/Mira.png" id="2_7yih5"]
[ext_resource type="Shader" path="res://scenes/Shaders/Blur.gdshader" id="3_o6yw0"]
[ext_resource type="FontFile" uid="uid://nvrncwkr1wgb" path="res://UI/cyrenia-regular.ttf" id="4_nnth8"]
[ext_resource type="Texture2D" uid="uid://c0o8cko7xsmmf" path="res://UI/Party/Page.png" id="6_8fbom"]
[ext_resource type="Texture2D" uid="uid://cto6cesjljnwv" path="res://art/Renders/Mira.png" id="7_su38b"]
[ext_resource type="Texture2D" uid="uid://bhbfk3uk3pfej" path="res://UI/Party/Cursor.png" id="8_eiy32"]
[ext_resource type="Shader" path="res://scenes/Shaders/Unshaded.gdshader" id="8_p8xdc"]
[ext_resource type="FontVariation" uid="uid://b26p56yb7cgso" path="res://UI/cyrenia-button.tres" id="9_uia6k"]
[ext_resource type="Texture2D" uid="uid://bqbuf3hq8oxm6" path="res://art/Icons/Items.png" id="10_x2te8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j4job"]
shader = ExtResource("3_o6yw0")
shader_parameter/lod = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_el5ff"]
bg_color = Color(0.160784, 0.160784, 0.160784, 1)
border_color = Color(0.803922, 0.784314, 0.894118, 1)
corner_radius_top_right = 16
corner_radius_bottom_right = 16
expand_margin_left = 18.0
expand_margin_top = 6.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m5kvw"]
bg_color = Color(0.1, 0.1, 0.1, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9
corner_detail = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_21psf"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9
corner_detail = 4

[sub_resource type="Theme" id="Theme_acgst"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_m5kvw")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_21psf")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qyuo7"]
bg_color = Color(0.1, 0.1, 0.1, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_detail = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0g5cc"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_detail = 4

[sub_resource type="Theme" id="Theme_t8etm"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_qyuo7")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_0g5cc")

[sub_resource type="LabelSettings" id="LabelSettings_2t2lh"]
font = ExtResource("4_nnth8")
font_size = 20
outline_size = 2

[sub_resource type="LabelSettings" id="LabelSettings_owkfl"]
font = ExtResource("4_nnth8")
font_size = 14
font_color = Color(0.533333, 0.533333, 0.533333, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qr8wo"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o20ut"]
bg_color = Color(0.454902, 0.454902, 0.454902, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nvspt"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.894118, 0.894118, 0.894118, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="Theme" id="Theme_x6d55"]
Panel/styles/panel = SubResource("StyleBoxFlat_nvspt")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rgdav"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.584314, 0.584314, 0.584314, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="Theme" id="Theme_3xf0g"]
Panel/styles/panel = SubResource("StyleBoxFlat_rgdav")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_icqax"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
border_width_left = 11
border_width_top = 8
border_width_right = 16
border_width_bottom = 8
border_color = Color(0.305882, 0.305882, 0.305882, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="Theme" id="Theme_6a77a"]
Panel/styles/panel = SubResource("StyleBoxFlat_icqax")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ki2fs"]
bg_color = Color(0.1, 0.1, 0.1, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9
corner_detail = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ulk57"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9
corner_detail = 4

[sub_resource type="Theme" id="Theme_k7w14"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_ki2fs")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_ulk57")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_an4ms"]
bg_color = Color(0.1, 0.1, 0.1, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_detail = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_017ft"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_detail = 4

[sub_resource type="Theme" id="Theme_qmrca"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_an4ms")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_017ft")

[sub_resource type="LabelSettings" id="LabelSettings_xcra6"]
line_spacing = 5.0
font = ExtResource("4_nnth8")
font_size = 121
font_color = Color(0.878431, 0.682353, 0.517647, 1)

[sub_resource type="LabelSettings" id="LabelSettings_l726v"]
line_spacing = 5.0
font = ExtResource("4_nnth8")
font_size = 121
font_color = Color(0.878431, 0.682353, 0.517647, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_llexj"]
shader = ExtResource("8_p8xdc")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vdoun"]
content_margin_left = 0.0
content_margin_right = 27.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 12
border_width_top = 5
border_width_right = 13
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 26
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 26
expand_margin_left = 6.0
expand_margin_right = 6.0

[sub_resource type="Theme" id="Theme_jibpk"]
default_font = ExtResource("9_uia6k")
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/colors/font_hover_pressed_color = Color(0, 0, 0, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0, 0, 0, 1)
Button/constants/outline_size = 2
Button/styles/disabled = null
Button/styles/focus = SubResource("StyleBoxFlat_vdoun")
Button/styles/hover = SubResource("StyleBoxFlat_vdoun")
Button/styles/normal = SubResource("StyleBoxFlat_vdoun")
Button/styles/pressed = SubResource("StyleBoxFlat_vdoun")

[sub_resource type="Shortcut" id="Shortcut_vilg5"]
events = [null]

[sub_resource type="AtlasTexture" id="AtlasTexture_wk61q"]
atlas = ExtResource("10_x2te8")
region = Rect2(18, 72, 18, 18)

[node name="PartyUI" type="Control"]
process_mode = 3
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.001
offset_right = -3.0
offset_bottom = 0.199951
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dogj7")
CursorPosition = Array[Vector2]([Vector2(385, 55), Vector2(385, 248), Vector2(385, 408), Vector2(385, 536)])

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Fade" type="ColorRect" parent="CanvasLayer"]
offset_right = 1282.0
offset_bottom = 801.0
color = Color(0, 0, 0, 0)

[node name="Blur" type="ColorRect" parent="CanvasLayer/Fade"]
material = SubResource("ShaderMaterial_j4job")
layout_mode = 0
offset_right = 1281.0
offset_bottom = 799.0

[node name="Leader" type="Panel" parent="CanvasLayer"]
texture_filter = 2
offset_left = -368.0
offset_right = -134.0
offset_bottom = 100.0
scale = Vector2(1.5, 1.5)
theme_override_styles/panel = SubResource("StyleBoxFlat_el5ff")

[node name="Icon" type="Sprite2D" parent="CanvasLayer/Leader"]
position = Vector2(37, 45)
scale = Vector2(0.0442713, 0.0442713)
texture = ExtResource("2_7yih5")

[node name="Aura" type="ProgressBar" parent="CanvasLayer/Leader"]
layout_mode = 0
offset_left = 75.0
offset_top = 37.0
offset_right = 185.0
offset_bottom = 64.0
theme = SubResource("Theme_acgst")
value = 13.0
rounded = true
show_percentage = false

[node name="AruaText" type="Label" parent="CanvasLayer/Leader/Aura"]
layout_mode = 0
offset_left = 119.667
offset_top = 12.3333
offset_right = 158.667
offset_bottom = 38.3333
theme_override_fonts/font = ExtResource("4_nnth8")
theme_override_font_sizes/font_size = 16
text = "13"

[node name="Health" type="ProgressBar" parent="CanvasLayer/Leader"]
z_index = 1
layout_mode = 0
offset_left = 75.0
offset_top = 31.0
offset_right = 185.0
offset_bottom = 51.0
theme = SubResource("Theme_t8etm")
value = 75.0
rounded = true
show_percentage = false

[node name="HpText" type="Label" parent="CanvasLayer/Leader/Health"]
layout_mode = 0
offset_left = 118.0
offset_top = 1.0
offset_right = 157.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("4_nnth8")
theme_override_font_sizes/font_size = 16
text = "70"

[node name="Name" type="Label" parent="CanvasLayer/Leader"]
layout_mode = 0
offset_left = 82.0
offset_top = 2.66667
offset_right = 129.0
offset_bottom = 28.6667
text = "Mira"
label_settings = SubResource("LabelSettings_2t2lh")
vertical_alignment = 1

[node name="Level" type="Label" parent="CanvasLayer/Leader"]
layout_mode = 0
offset_left = 140.0
offset_top = 71.3334
offset_right = 229.0
offset_bottom = 97.3334
text = "S. Lv "
label_settings = SubResource("LabelSettings_owkfl")

[node name="Number" type="Label" parent="CanvasLayer/Leader/Level"]
layout_mode = 0
offset_left = 32.9492
offset_top = -9.33336
offset_right = 72.9492
offset_bottom = 22.6666
theme_override_fonts/font = ExtResource("4_nnth8")
theme_override_font_sizes/font_size = 20
text = "1"
vertical_alignment = 1

[node name="ExpBar" type="ProgressBar" parent="CanvasLayer/Leader"]
layout_mode = 0
offset_left = 81.9777
offset_top = 72.9816
offset_right = 133.978
offset_bottom = 79.9816
theme_override_styles/background = SubResource("StyleBoxFlat_qr8wo")
theme_override_styles/fill = SubResource("StyleBoxFlat_o20ut")
value = 30.0
show_percentage = false

[node name="Border1" type="Panel" parent="CanvasLayer/Leader"]
layout_mode = 0
offset_left = -40.0
offset_top = -25.0
offset_right = 241.0
offset_bottom = 105.0
theme = SubResource("Theme_x6d55")

[node name="Border2" type="Panel" parent="CanvasLayer/Leader/Border1"]
show_behind_parent = true
layout_mode = 0
offset_left = 6.0
offset_top = 5.0
offset_right = 277.0
offset_bottom = 126.0
theme = SubResource("Theme_3xf0g")

[node name="Border3" type="Panel" parent="CanvasLayer/Leader/Border1/Border2"]
show_behind_parent = true
layout_mode = 0
offset_left = 5.0
offset_top = -3.0
offset_right = 274.0
offset_bottom = 117.0
theme = SubResource("Theme_6a77a")

[node name="Member1" type="Panel" parent="CanvasLayer"]
texture_filter = 2
offset_left = -368.0
offset_top = 189.0
offset_right = -134.0
offset_bottom = 298.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(0.137743, -0.0191193)
theme_override_styles/panel = SubResource("StyleBoxFlat_el5ff")

[node name="Icon" type="Sprite2D" parent="CanvasLayer/Member1"]
position = Vector2(37, 54.333)
scale = Vector2(0.0442713, 0.0442713)
texture = ExtResource("2_7yih5")

[node name="Aura" type="ProgressBar" parent="CanvasLayer/Member1"]
layout_mode = 0
offset_left = 75.0
offset_top = 46.6667
offset_right = 185.0
offset_bottom = 73.6667
theme = SubResource("Theme_k7w14")
value = 13.0
rounded = true
show_percentage = false

[node name="AruaText" type="Label" parent="CanvasLayer/Member1/Aura"]
layout_mode = 0
offset_left = 121.667
offset_top = 11.6667
offset_right = 160.667
offset_bottom = 37.6666
theme_override_fonts/font = ExtResource("4_nnth8")
theme_override_font_sizes/font_size = 16
text = "13"

[node name="Health" type="ProgressBar" parent="CanvasLayer/Member1"]
z_index = 1
layout_mode = 0
offset_left = 75.0
offset_top = 40.6667
offset_right = 185.0
offset_bottom = 60.6667
theme = SubResource("Theme_qmrca")
value = 75.0
rounded = true
show_percentage = false

[node name="HpText" type="Label" parent="CanvasLayer/Member1/Health"]
layout_mode = 0
offset_left = 120.0
offset_top = 1.0
offset_right = 159.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("4_nnth8")
theme_override_font_sizes/font_size = 16
text = "70"

[node name="Name" type="Label" parent="CanvasLayer/Member1"]
layout_mode = 0
offset_left = 81.0
offset_top = 14.0
offset_right = 180.0
offset_bottom = 40.0
text = "Alcine"
label_settings = SubResource("LabelSettings_2t2lh")
vertical_alignment = 1

[node name="ExpBar" type="ProgressBar" parent="CanvasLayer/Member1"]
layout_mode = 0
offset_left = 81.9777
offset_top = 82.9816
offset_right = 133.978
offset_bottom = 89.9816
theme_override_styles/background = SubResource("StyleBoxFlat_qr8wo")
theme_override_styles/fill = SubResource("StyleBoxFlat_o20ut")
value = 30.0
show_percentage = false

[node name="Border1" type="Panel" parent="CanvasLayer/Member1"]
layout_mode = 0
offset_left = -40.0
offset_top = -7.0
offset_right = 243.0
offset_bottom = 117.0
theme = SubResource("Theme_x6d55")

[node name="Border2" type="Panel" parent="CanvasLayer/Member1/Border1"]
show_behind_parent = true
layout_mode = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 279.0
offset_bottom = 120.0
theme = SubResource("Theme_3xf0g")

[node name="Border3" type="Panel" parent="CanvasLayer/Member1/Border1/Border2"]
show_behind_parent = true
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 275.0
offset_bottom = 111.0
theme = SubResource("Theme_6a77a")

[node name="Level" type="Label" parent="CanvasLayer/Member1"]
layout_mode = 0
offset_left = 140.0
offset_top = 81.3333
offset_right = 229.0
offset_bottom = 107.333
text = "S. Lv "
label_settings = SubResource("LabelSettings_owkfl")

[node name="Number" type="Label" parent="CanvasLayer/Member1/Level"]
layout_mode = 0
offset_left = 32.9492
offset_top = -9.33336
offset_right = 72.9492
offset_bottom = 22.6666
theme_override_fonts/font = ExtResource("4_nnth8")
theme_override_font_sizes/font_size = 20
text = "1"
vertical_alignment = 1

[node name="Page4" type="TextureRect" parent="CanvasLayer"]
visible = false
offset_left = 662.0
offset_top = 23.0
offset_right = 1785.0
offset_bottom = 1475.0
rotation = 0.069947
scale = Vector2(0.489946, 0.489946)
texture = ExtResource("6_8fbom")

[node name="Page3" type="TextureRect" parent="CanvasLayer"]
visible = false
z_index = 1
offset_left = 605.0
offset_top = 56.0
offset_right = 1728.0
offset_bottom = 1508.0
rotation = -0.0396787
scale = Vector2(0.489946, 0.489946)
texture = ExtResource("6_8fbom")

[node name="Page2" type="TextureRect" parent="CanvasLayer"]
z_index = 2
offset_left = 1350.0
offset_top = 29.0
offset_right = 2473.0
offset_bottom = 1481.0
rotation = 0.0340545
scale = Vector2(0.489946, 0.489946)
texture = ExtResource("6_8fbom")

[node name="Label" type="Label" parent="CanvasLayer/Page2"]
layout_mode = 0
offset_left = 148.0
offset_top = 130.0
offset_right = 952.0
offset_bottom = 255.0
text = "Mira Levenor"
label_settings = SubResource("LabelSettings_xcra6")

[node name="Render" type="TextureRect" parent="CanvasLayer/Page2"]
layout_mode = 0
offset_left = -21.5144
offset_top = 147.773
offset_right = 3409.49
offset_bottom = 3613.77
scale = Vector2(0.380595, 0.380595)
texture = ExtResource("7_su38b")
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": true,
"player": "",
"source": ""
}

[node name="Shadow" type="TextureRect" parent="CanvasLayer/Page2/Render"]
show_behind_parent = true
texture_filter = 4
layout_mode = 0
offset_left = 318.411
offset_top = 53.542
offset_right = 9393.41
offset_bottom = 9258.54
scale = Vector2(0.380595, 0.380595)
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": true,
"player": "",
"source": ""
}

[node name="Page1" type="TextureRect" parent="CanvasLayer"]
z_index = 3
offset_left = 1346.0
offset_top = 44.0
offset_right = 2469.0
offset_bottom = 1496.0
rotation = -0.00981665
scale = Vector2(0.489946, 0.489946)
texture = ExtResource("6_8fbom")

[node name="Label" type="Label" parent="CanvasLayer/Page1"]
layout_mode = 0
offset_left = 148.0
offset_top = 130.0
offset_right = 952.0
offset_bottom = 255.0
text = "Mira Levenor"
label_settings = SubResource("LabelSettings_l726v")

[node name="Render" type="TextureRect" parent="CanvasLayer/Page1"]
layout_mode = 0
offset_left = 86.7788
offset_top = 100.868
offset_right = 3517.78
offset_bottom = 3580.87
scale = Vector2(0.43, 0.43)
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": true,
"player": "",
"source": ""
}

[node name="Shadow" type="TextureRect" parent="CanvasLayer/Page1/Render"]
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
texture_filter = 4
layout_mode = 0
offset_left = 272.859
offset_top = 20.1093
offset_right = 9347.86
offset_bottom = 9225.11
scale = Vector2(0.380595, 0.380595)
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": true,
"player": "",
"source": ""
}

[node name="Cursor" type="TextureRect" parent="CanvasLayer"]
visible = false
offset_left = 385.0
offset_top = 60.0
offset_right = 433.0
offset_bottom = 152.0
scale = Vector2(0.404152, 0.404152)
texture = ExtResource("8_eiy32")

[node name="ItemPreview" type="Button" parent="CanvasLayer/Cursor"]
visible = false
visibility_layer = 1024
texture_filter = 1
material = SubResource("ShaderMaterial_llexj")
layout_direction = 1
layout_mode = 0
offset_left = 165.779
offset_top = 27.2175
offset_right = 253.779
offset_bottom = 60.2175
scale = Vector2(4, 4)
pivot_offset = Vector2(19.2536, 14.8241)
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_jibpk")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
shortcut = SubResource("Shortcut_vilg5")
text = "Item x3"
icon = SubResource("AtlasTexture_wk61q")
expand_icon = true

[node name="Audio" type="AudioStreamPlayer" parent="."]
bus = &"UI"

[connection signal="expand" from="." to="." method="_on_expand"]
[connection signal="pressed" from="CanvasLayer/Cursor/ItemPreview" to="." method="_on_item_preview_pressed"]
